# thermodynamic_reactions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yml  ruff.yml  test.yml
jupyterbook/: bibliography.md  glossary.md  index.md  myst.yml  notation.md  references.bib
jupyterbook/01_statistical_mechanics/: 00_index.md  01_particles.md  02_collisions.md  03_entropy.md  04_maxwell_boltzmann.md  05_pressure.md
jupyterbook/02_thermodynamics/: 00_index.md  01_ideal_gas_law.md  02_laws_of_thermodynamics.md  03_thermodynamic_potentials.md  04_chemical_potential.md  05_nonidealities.md  06_mixing.md
jupyterbook/03_reactions/: 00_index.md  01_reaction_coordinates.md  02_reaction_gibbs_energy.md  03_equilibrium_constant.md  04_adsorption.md  04_equilibrium_temperature.md  05_adsorption.md  05_equilibrium_temperature.md  05_multicomponent.md  06_equilibrium_temperature.md  07_acids_bases.md  08_speciation_buffers.md  09_mass_action_law.md  09_reaction_mechanisms.md  10_mass_action_law.md  11_kinetics_temperature.md  12_enzyme_kinetics.md
jupyterbook/04_implementation/: 00_index.md  01_source_term.md  02_equilibrium.md  02_rate_laws.md  03_equilibrium_reactions.md  03_kinetics.md  04_activity_corrections.md  04_energy_balance.md  05_acid_base.md  05_activity_corrections.md  06_acid_base.md  06_buffer_capacity.md  06_practical_patterns.md  07_acid_base.md  07_buffer_capacity.md  07_enzyme_kinetics.md  07_kinetics.md  08_buffer_capacity.md  08_enzyme_kinetics.md  08_interface.md  09_enzyme_kinetics.md  09_interface.md  10_interface.md
reactions/: __init__.py  activity.py  analysis.py  api.py  common.py  equilibrium.py  formulation.py  ionic.py  model.py  modulator.py  plots.py  rate.py  reaction.py  solver.py  species.py  state.py  validate.py
scripts/: build_api_docs.py  format_cells.py
tests/: test_activity.py  test_analysis.py  test_equilibrium.py  test_formulation.py  test_model.py  test_reaction.py  test_reactions.py  test_simulate.py  test_solve_equilibrium.py
