[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "thermodynamic-reactions"
dynamic = ["version"]
description = "Thermodynamic and kinetic reaction models for CADET"
authors = [
    { name = "Johannes Schmölder", email = "j.schmoelder@fz-juelich.de" },
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
homepage = "https://github.com/schmoelder/thermodynamic-reactions"
"Bug Tracker" = "https://github.com/schmoelder/thermodynamic-reactions/issues"

[tool.setuptools]
packages = ["reactions"]

[dependency-groups]
testing = ["pytest"]
docs = ["jupyter-book>=2.0", "griffe"]

[tool.ruff]
src = ["reactions", "tests"]
exclude = ["docs", "__init__.py"]
line-length = 88
fix = true

[tool.ruff.lint]
preview = true
select = [
  "ANN",  # type annotations
  "D",    # docstrings
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
]
ignore = [
  "ANN401",  # Allow dynamically typed expressions like `Any`
  "D100",    # Allow missing docstring in public module
  "D102",    # Missing docstring in public method — overrides inherit from base class
  "D105",    # Missing docstring in magic method — not required under numpy convention
  "D205",    # Blank line between summary and description — structural rewrite deferred
  "E741",    # Ambiguous variable name — I is standard notation for ionic strength
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "ANN",   # type annotations
  "D",     # docstrings
  "E402",  # imports on top of module
  "E731",  # lambda assignments
  "F841",  # unused variables
]
"scripts/*.py" = [
  "ANN",   # type annotations not required for scripts
  "D103",  # missing docstrings in scripts
]
"reactions/solver.py" = ["ANN"]   # IDA/ODE callback signatures imposed by solver API
"reactions/analysis.py" = ["ANN"] # ReactionModel argument typing deferred
"reactions/common.py" = ["ANN"]   # optional activity_coefficient typing deferred
"reactions/plots.py" = ["ANN"]
"reactions/species.py" = ["ANN"]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "tests",
]
